Refactor: refac code structure for improved readability and maintainability
